# Rusty-Scrape

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
src/: main.rs
wordlists/: default.csv
