[package]
name = "rust_scrape"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.4.3"
rayon = "1.3.0"
rand = "0.7.3"
clap = "3.0.0-beta.1"
reqwest = {version = "0.10.4", features = ["blocking"]}

